Upates for TAS environment